--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "live-server --port=5174 --open=current-site.html --watch=./"
+    "dev": "live-server --port=5174 --open=index.html --watch=./"
   },
   "keywords": [],
   "author": "",
